--- a/index_ua.html
+++ b/index_ua.html
@@ -14,7 +14,7 @@
 <div id="local">
 <ul class="select3"><span id="sel">Оберіть мову</span>
 <li class="first1"><a href=" ">Українська<img style="float:right" src="flag_ukraina.jpg" width="40" height="20"/><a></li>
-<li class="first1"><a href="index_ru.html">Російська<img style="float:right" src="flag_rossiya.jpg" width="40" height="20"/></a></li>
+<li class="first1"><a href="index.html">Російська<img style="float:right" src="flag_rossiya.jpg" width="40" height="20"/></a></li>
 </ul>
 <div class="jumbotron">
     <h2  style="font-size:18px !important;">Місцевий час та дата</h2>
