--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="p_prldr"><div class="contpre"><span class="svg_anm"></span></div></div>
 <div id="local">
 <ul class="select3"><span id="sel">Выберите язык</span>
-<li class="first1"><a href="index_ru.html">Русский<img style="float:right" src="flag_rossiya.jpg" width="40" height="20"/></a></li>
+<li class="first1"><a href="index.html">Русский<img style="float:right" src="flag_rossiya.jpg" width="40" height="20"/></a></li>
 <li class="first1"><a href="index_ua.html">Украинский<img style="float:right" src="flag_ukraina.jpg" width="40" height="20"/></a></li>
 </ul>
 <div class="jumbotron">
